--- a/requirements.txt
+++ b/requirements.txt
@@ -1,131 +1,116 @@
-about-time==4.2.1
-absl-py==1.4.0
-aiohttp==3.8.4
-aiosignal==1.3.1
-alive-progress==3.0.1
+absl-py==2.3.1
+annotated-types==0.7.0
+anyio==4.12.0
 astunparse==1.6.3
-async-generator==1.10
-async-timeout==4.0.2
-attrs==22.2.0
-beautifulsoup4==4.11.2
-bs4==0.0.1
-cachetools==5.3.0
-certifi==2022.12.7
-cffi==1.15.1
-chardet==3.0.4
-charset-normalizer==3.0.1
-click==8.1.3
-cryptography==39.0.1
-Cython==0.29.33
-dlib==19.24.0
-exceptiongroup==1.1.0
+attrs==25.4.0
+beautifulsoup4==4.14.3
+certifi==2025.11.12
+cffi==2.0.0
+charset-normalizer==3.4.4
+click==8.1.8
+Cython==3.2.3
+distro==1.9.0
+dlib==20.0.0
+exceptiongroup==1.3.1
 face-recognition==1.3.0
-face-recognition-models==0.3.0
-ffmpeg-python==0.2.0
-filelock==3.9.0
-flatbuffers==23.1.21
-frozenlist==1.3.3
-future==0.18.3
-gast==0.4.0
-google-auth==2.16.0
-google-auth-oauthlib==0.4.6
+face_recognition_models==0.3.0
+filelock==3.20.1
+flatbuffers==25.9.23
+fsspec==2025.12.0
+gast==0.7.0
 google-pasta==0.2.0
-googletrans==4.0.0rc1
-grapheme==0.6.0
-grpcio==1.51.1
-gTTS==2.3.1
-h11==0.9.0
-h2==3.2.0
-h5py==3.8.0
-hpack==3.0.0
-hstspreload==2023.1.1
-httpcore==0.9.1
-httpx==0.13.3
-huggingface-hub==0.12.0
-hyperframe==5.2.0
-idna==2.10
-importlib-metadata==6.0.0
-iso8601==1.1.0
-joblib==1.2.0
-keras==2.11.0
-libclang==15.0.6.1
-Markdown==3.4.1
-MarkupSafe==2.1.2
-more-itertools==9.0.0
-multidict==6.0.4
-nltk==3.8.1
-numpy==1.24.2
-oauthlib==3.2.2
-openai==0.26.5
-openai-whisper @ git+https://github.com/openai/whisper.git@7858aa9c08d98f75575035ecd6481f462d66ca27
-opencv-python==4.7.0.68
-opt-einsum==3.3.0
-outcome==1.2.0
-packaging==23.0
-pandas==1.5.3
-Pillow==9.4.0
-playsound==1.3.0
-protobuf==3.19.6
-pyasn1==0.4.8
-pyasn1-modules==0.2.8
-PyAudio==0.2.13
-pycparser==2.21
-pynput==1.7.6
-pyobjc-core==9.0.1
-pyobjc-framework-ApplicationServices==9.0.1
-pyobjc-framework-Cocoa==9.0.1
-pyobjc-framework-Quartz==9.0.1
-pyOpenSSL==23.0.0
-PyQt5==5.15.9
-PyQt5-Qt5==5.15.2
-PyQt5-sip==12.11.1
+googletrans==4.0.2
+grpcio==1.76.0
+gTTS==2.5.4
+h11==0.16.0
+h2==4.3.0
+h5py==3.14.0
+hpack==4.1.0
+httpcore==1.0.9
+httpx==0.28.1
+hyperframe==6.1.0
+idna==3.11
+importlib_metadata==8.7.0
+Jinja2==3.1.6
+jiter==0.12.0
+joblib==1.5.2
+keras==3.10.0
+libclang==18.1.1
+llvmlite==0.46.0
+Markdown==3.9
+markdown-it-py==3.0.0
+MarkupSafe==3.0.3
+mdurl==0.1.2
+mediapipe==0.10.30
+ml_dtypes==0.5.4
+more-itertools==10.8.0
+mpmath==1.3.0
+namex==0.1.0
+networkx==3.6.1
+nltk==3.9.2
+numba==0.63.1
+numpy==2.2.6
+openai==2.13.0
+openai-whisper==20250625
+opencv-python==4.12.0.88
+opt_einsum==3.4.0
+optree==0.18.0
+outcome==1.3.0.post0
+packaging==25.0
+pandas==2.3.3
+pillow==11.3.0
+protobuf==6.33.2
+PyAudio==0.2.14
+pycparser==2.23
+pydantic==2.12.5
+pydantic_core==2.41.5
+Pygments==2.19.2
+pynput==1.8.1
+pyobjc-core==12.1
+pyobjc-framework-ApplicationServices==12.1
+pyobjc-framework-Cocoa==12.1
+pyobjc-framework-CoreText==12.1
+pyobjc-framework-Quartz==12.1
+PyQt5==5.15.11
+PyQt5-Qt5==5.15.18
+PyQt5_sip==12.17.2
 PySocks==1.7.1
-python-dateutil==2.8.2
-python-dotenv==0.21.1
-python-speech-features==0.6
-pytz==2022.7.1
-PyYAML==6.0
-regex==2022.10.31
-requests==2.28.2
-requests-oauthlib==1.3.1
-rfc3986==1.5.0
-rsa==4.9
-scikit-learn==1.2.1
-scipy==1.10.0
+python-dateutil==2.9.0.post0
+python_speech_features==0.6
+pytz==2025.2
+regex==2025.11.3
+requests==2.32.5
+rich==14.2.0
+scikit-learn==1.8.0
+scipy==1.16.3
 screeninfo==0.8.1
-selenium==4.0.0
-semantic-version==2.10.0
-serial==0.0.97
-setuptools-rust==1.5.2
-six==1.16.0
-sklearn==0.0.post1
-sniffio==1.3.0
+selenium==4.39.0
+setuptools==80.9.0
+six==1.17.0
+sniffio==1.3.1
 sortedcontainers==2.4.0
-sounddevice==0.4.6
-soundfile==0.12.1
-soupsieve==2.3.2.post1
-tensorboard==2.11.2
-tensorboard-data-server==0.6.1
-tensorboard-plugin-wit==1.8.1
-tensorflow==2.11.0
-tensorflow-estimator==2.11.0
-tensorflow-io-gcs-filesystem==0.30.0
-termcolor==2.2.0
-tflearn==0.5.0
-threadpoolctl==3.1.0
-tokenizers==0.13.2
-torch==1.13.1
-tqdm==4.64.1
-transformers==4.26.1
-trio==0.22.0
-trio-websocket==0.9.2
-typing_extensions==4.4.0
-urllib3==1.26.14
-urllib3-secure-extra==0.1.0
-webdriver-manager==3.8.5
-Werkzeug==2.2.2
-whisper==1.1.10
-wrapt==1.14.1
-wsproto==1.2.0
-yarl==1.8.2
-zipp==3.13.0
+sounddevice==0.5.3
+soupsieve==2.8
+SpeechRecognition==3.14.4
+sympy==1.14.0
+tensorboard==2.20.0
+tensorboard-data-server==0.7.2
+tensorflow==2.20.0
+termcolor==3.1.0
+threadpoolctl==3.6.0
+tiktoken==0.12.0
+torch==2.9.1
+tqdm==4.67.1
+trio==0.32.0
+trio-websocket==0.12.2
+typing-inspection==0.4.2
+typing_extensions==4.15.0
+tzdata==2025.3
+urllib3==2.6.2
+websocket-client==1.9.0
+Werkzeug==3.1.4
+wheel==0.45.1
+wikipedia==1.4.0
+wrapt==2.0.1
+wsproto==1.3.2
+zipp==3.23.0
